--- a/backend/Product/package.json
+++ b/backend/Product/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
-    "mssql": "^6.3.1"
+    "mssql": "^6.3.1",
+    "multer": "^1.4.2"
   }
 }
